--- a/index.html
+++ b/index.html
@@ -96,8 +96,10 @@
 
     <div id="create-flashcards-div">
         <input id="title-text" type="text" placeholder= "Title"/>
-        <button id="private-btn">Private</button>
-        <button id="public-btn">Public</button>
+        <select id="displayVal-menu">
+            <option value="priv">Private</option>
+            <option value="pub">Public</option>
+        </select>
         <hr>
 
         <div id="new-cards"></div>
