--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
 
         <!-- Choose Flashcards -->
         <button id="choose-btn">CHOOSE</button>
+        <div id="private-sets"></div>
 
         <div id="new-flashcards">
 
