--- a/index.html
+++ b/index.html
@@ -87,12 +87,16 @@
 
         <!-- Choose Flashcards -->
         <button id="choose-btn">CHOOSE</button>
-        <div id="private-sets"></div>
+        <div id="private-sets">
 
+        </div>
+        <button id="see-all-btn">See more</button>
+        <div id="all-private-sets">
+
+        </div>
         <div id="new-flashcards">
 
         </div>
-        <button>See more</button>
     </div>
 
     <div id="create-flashcards-div">
