--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         <div id="all-private-sets">
 
         </div>
-        <div id="new-flashcards">
+        <div id="private-flashcards-div">
 
         </div>
     </div>
@@ -116,7 +116,7 @@
         <button id="create-deck-btn">Create</button>
     </div>
 
-    <div id="all-flashcards-div">
+    <div id="flashcards-div">
 
     </div>
 </body>
