--- a/index.html
+++ b/index.html
@@ -72,6 +72,10 @@
         <div id="public-sets">
             <h2>Public Sets</h2>
         </div>
+        <button id="see-all-pub-btn">See More</button>
+        <div id="all-public-sets">
+
+        </div>
     </div>
 
     <div id="flashcards-div">
@@ -90,7 +94,7 @@
         <div id="private-sets">
 
         </div>
-        <button id="see-all-btn">See more</button>
+        <button id="see-all-priv-btn">See More</button>
         <div id="all-private-sets">
 
         </div>
